RESOLVED FIXED Bug 88531
[Qt][WK2] Fix custom device pixel ratio propagation and add QML API tests
https://bugs.webkit.org/show_bug.cgi?id=88531
Summary [Qt][WK2] Fix custom device pixel ratio propagation and add QML API tests
Alexander Færøy
Reported 2012-06-07 06:37:29 PDT
SSIA.
Attachments
Patch (2.48 KB, patch)
2012-06-07 06:43 PDT, Alexander Færøy
no flags
Patch (3.17 KB, patch)
2012-06-07 07:36 PDT, Alexander Færøy
no flags
proposed patch (9.44 KB, patch)
2012-08-23 11:36 PDT, Andras Becsi
no flags
proposed patch (9.67 KB, patch)
2012-08-24 04:24 PDT, Andras Becsi
no flags
Alexander Færøy
Comment 1 2012-06-07 06:43:47 PDT
Kenneth Rohde Christiansen
Comment 2 2012-06-07 06:51:17 PDT
Comment on attachment 146278 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=146278&action=review > Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_devicePixelRatio.qml:32 > + webView.experimental.devicePixelRatio = 0.2 Why not just use 2.0 > Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_devicePixelRatio.qml:35 > + webView.experimental.evaluateJavaScript( Why no test for the media query? > Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_devicePixelRatio.qml:36 > + "(function() { return window.devicePixelRatio })()", isnt this called webkitDevicePixelRatio?
Alexander Færøy
Comment 3 2012-06-07 07:36:28 PDT
Csaba Osztrogonác
Comment 4 2012-06-08 03:49:01 PDT
Landed in http://trac.webkit.org/changeset/119723, but there are two failing API tests: XPASS : qmltests::DevicePixelRatio::test_devicePixelRatio() '' returned TRUE unexpectedly. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_devicePixelRatio.qml(33)] XPASS : qmltests::DevicePixelRatio::test_devicePixelRatioMediaQuery() '' returned TRUE unexpectedly. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_devicePixelRatio.qml(51)] Could you check it, please?
Csaba Osztrogonác
Comment 5 2012-06-19 08:36:34 PDT
The patch landed, so we should close it ... But don't forget that it is incorrect - https://bugs.webkit.org/show_bug.cgi?id=88870
Csaba Osztrogonác
Comment 6 2012-07-31 01:43:31 PDT
(In reply to comment #5) > The patch landed, so we should close it ... But don't forget that it is incorrect - https://bugs.webkit.org/show_bug.cgi?id=88870 Guys, please answer and don't ignore this bug ...
Csaba Osztrogonác
Comment 7 2012-08-07 14:54:24 PDT
Reopen, because it was rolled out by http://trac.webkit.org/changeset/124923. See https://bugs.webkit.org/show_bug.cgi?id=88870 for details.
Andras Becsi
Comment 8 2012-08-23 11:36:50 PDT
Created attachment 160203 [details] proposed patch
Kenneth Rohde Christiansen
Comment 9 2012-08-23 11:44:42 PDT
Comment on attachment 160203 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=160203&action=review > Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:803 > + // Set the custom device pixel ratio requested from QML > + // as soon as the content item has a valid size. > + webPageProxy->setCustomDeviceScaleFactor(m_customDevicePixelRatio); It ignores it if not? Why does it do that?
Andras Becsi
Comment 10 2012-08-23 13:52:46 PDT
(In reply to comment #9) > (From update of attachment 160203 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=160203&action=review > > > Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:803 > > + // Set the custom device pixel ratio requested from QML > > + // as soon as the content item has a valid size. > > + webPageProxy->setCustomDeviceScaleFactor(m_customDevicePixelRatio); > > It ignores it if not? Why does it do that? The DrawingAreaProxy returns early if the page size is empty and the time when the experimental property is set the QML page item has no valid size yet thus the information does not reach the web process.
Kenneth Rohde Christiansen
Comment 11 2012-08-23 14:06:28 PDT
(In reply to comment #10) > (In reply to comment #9) > > (From update of attachment 160203 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=160203&action=review > > > > > Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:803 > > > + // Set the custom device pixel ratio requested from QML > > > + // as soon as the content item has a valid size. > > > + webPageProxy->setCustomDeviceScaleFactor(m_customDevicePixelRatio); > > > > It ignores it if not? Why does it do that? > > The DrawingAreaProxy returns early if the page size is empty and the time when the experimental property is set the QML page item has no valid size yet thus the information does not reach the web process. I think that comment there would be quite valuable.
Andras Becsi
Comment 12 2012-08-24 04:24:45 PDT
Created attachment 160392 [details] proposed patch With additional comment explaining the issue.
Andras Becsi
Comment 13 2012-08-24 06:50:22 PDT
Comment on attachment 160392 [details] proposed patch Clearing flags on attachment: 160392 Committed r126582: <http://trac.webkit.org/changeset/126582>
Andras Becsi
Comment 14 2012-08-24 06:50:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.