[Qt][WK2] Fix custom device pixel ratio propagation and add QML API tests https://bugs.webkit.org/show_bug.cgi?id=88531

Reviewed by Kenneth Rohde Christiansen.

Defer setting the custom device pixel ratio until the page item has
a valid size to make sure that the scale factor reaches the web process.

QML test based on patch by Alexander Færøy.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::QQuickWebViewPrivate):
(QQuickWebViewPrivate::didRelaunchProcess):
(QQuickWebViewPrivate::didChangeContentsSize):
(QQuickWebViewFlickablePrivate::didChangeContentsSize):
(QQuickWebViewExperimental::devicePixelRatio):
(QQuickWebViewExperimental::setDevicePixelRatio):
* UIProcess/API/qt/qquickwebview_p.h:
* UIProcess/API/qt/qquickwebview_p_p.h:
(QQuickWebViewPrivate):
* UIProcess/API/qt/tests/qmltests/WebView/tst_devicePixelRatio.qml: Added.
  Test case for the QML device pixel ratio API.

Canonical link: https://commits.webkit.org/112796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126582 268f45cc-cd09-0410-ab3c-d52691b4dbfc